# rustle-facts

./: .gitignore  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: ci.yml  coverage.yml  release.yml
benches/: performance.rs
docs/: modular-architecture-design.md
specs/: 000-specs-status.md  010-rustle-facts-architecture-detection.md  020-enhanced-ssh-configuration.md
src/: cache.rs  config.rs  docker_facts.rs  enrichment.rs  error.rs  lib.rs  main.rs  ssh_facts.rs  types.rs
tests/: docker_integration_test.rs  integration_tests.rs  test_real_output.rs
tests/fixtures/: docker_test_playbook.json  file_operations.json  file_operations_localhost_and_dockerhost.json  multi_host_playbook.json  parsed_playbook.json
