[package]
name = "rustle-facts"
version = "0.1.0"
edition = "2021"
authors = ["Glen Baker iepathos@gmail.com"]
description = "Architecture detection tool for Rustle binary compilation"
license = "GPL-3.0"
repository = "https://github.com/iepathos/rustle-facts"
keywords = ["ansible", "configuration", "ssh", "facts", "architecture"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
dirs = "5.0"
dashmap = "5.5"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.13"
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "performance"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true